# gfxlib-std

./: .gitmodules  CMakeLists.txt  README.md
backend/include/common/: exception.hpp  log.hpp
backend/include/custom-hui/: button.hpp  button_cancel.hpp  button_ok.hpp  buttons_list.hpp  closable_panel.hpp  container_widget.hpp  dialog_box.hpp  event.hpp  file_dialog_box.hpp  input_text.hpp  label.hpp  message_box.hpp  scrollable_buttons_list_widget.hpp  scrollable_list_widget.hpp  scrollable_widget.hpp  scrollbar.hpp  slider.hpp  text_expand.hpp  tool_bar.hpp  widget.hpp  window_manager.hpp
backend/include/dr4/: backend_impl.hpp  converts.hpp  dr4_impl.hpp  font_impl.hpp  img_impl.hpp  primitives_impl.hpp  text_impl.hpp  texture_impl.hpp  window_impl.hpp
backend/include/pp/: pp_impl.hpp
backend/include/pp/shapes/: brush.hpp  circle.hpp  text.hpp
backend/include/pp/tools/: brush.hpp  circle.hpp  rect.hpp  text.hpp
backend/source/custom-hui/: button.cpp  buttons_list.cpp  event.cpp  input_text.cpp  label.cpp  message_box.cpp  scrollable_buttons_list_widget.cpp  scrollable_list_widget.cpp  scrollable_widget.cpp  scrollbar.cpp  slider.cpp  tool_bar.cpp  widget.cpp  window_manager.cpp
backend/source/dr4/: backend_impl.cpp  converts.cpp  dr4_impl.cpp  font_impl.cpp  img_impl.cpp  primtives_impl.cpp  text_impl.cpp  texture_impl.cpp  window_impl.cpp
backend/source/pp/: pp_impl.cpp
backend/source/pp/shapes/: brush.cpp  circle.cpp  rect.cpp  text.cpp
backend/source/pp/tools/: brush.cpp  (+3 more)
cmake/: funcs.cmake
examples/: main.cpp
scripts/: build.sh  clean.sh
