cmake_minimum_required( VERSION 3.16 )
project( dr4hui-backend LANGUAGES CXX )

set( CMAKE_CXX_STANDARD 17 )
set( CMAKE_CXX_STANDARD_REQUIRED ON )
set( CMAKE_EXPORT_COMPILE_COMMANDS ON )

option(BUILD_EXAMPLES "Build the examples" OFF)

include(cmake/funcs.cmake)

setup_constants()
setup_interface()
setup_libs()

if ( CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR )
    install_libs()
    if ( BUILD_EXAMPLES )
        build_examples()
    endif()
endif()
